# IA-clustering

./: .env  .gitignore  app.py  clustering.py  database.py  db.sqlite3  ia.py  main.py  mds.py  metafile.py  nlp.py  pyproject.toml  similary.py
ai_api/: asgi.py  settings.py  urls.py  wsgi.py
connection/: sockets.py
nlp/: nlpdocument.py  urls.py
