[tool.poetry]
name = "ia-clustering"
version = "0.1.0"
description = ""
authors = ["RDCode <rkostalin@gmail.com>"]
readme = "README.md"
packages = [{include = "ia_clustering"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
nltk = "^3.8.1"
websockets = "^11.0.3"

[tool.poetry.scripts]
start = "main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
